--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.1",
     "firebase": "^9.21.0",
     "next": "13.4.1",
+    "next-pwa": "^5.6.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
