--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,7 @@
 NEXT_PUBLIC_ENV=dev
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAjdASQC-r1msbt3obCGhOnNUoT_yTvi9w
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=the-time-hotel-6ef9d.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=the-time-hotel-6ef9d
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=the-time-hotel-6ef9d.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDERID=811509705233
+NEXT_PUBLIC_FIREBASE_APP_ID=1:811509705233:web:105c6da1d139a08ca09fb0
